$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- modified kernel patch to handle ipnat+dummynet in ip_input -> should fix problems
  with captive portal not reporting downloaded data per user properly when the
  traffic shaper is on, and also makes per-user bandwidth limits work again

- add ural(4) to list of recognized wireless NICs

- removed "-P" option from boot.config again (doesn't work properly with USB keyboards)

- add kbdmux to kernel config of generic-pc(-cdrom) -> should fix problems with USB keyboards (hopefully)

- use setkey from ipsec-tools now that we use NAT-T (mkasper)


1.3b2
-----

- enabled AES for IPsec phase 1 (mkasper)

- bumped MFS size in rc.firmware to 10 MB (mkasper)

- set "-P" option in boot.config for generic-pc and generic-pc-cdrom to automatically
  probe for a keyboard and use the serial port if no keyboard is found (mkasper)

- compiled SNMP agent with support for memory usage information MIB (mkasper)

- enabled NAT-T support for IPsec tunnels -> new option on IPsec webGUI pages (mkasper)

- back-ported MSS clamping fix from MPD 4.0b5 to MPD 3.18 (fixes MTU problems with
  PPPoE client) (mkasper)

- enabled hostap for wireless cards supported by the ral(4) driver (mkasper)

- forced PIO mode for ATA driver to work around problems with quirky hardware
  (IDE controllers, CF cards) (mkasper)

- changes in Captive Portal (jdegraeve):
 - Always sent the session-time instead of only sending it within a stop. This
   will cause most prepaid systems to work again.


1.3b1
-----

- changed base system to FreeBSD 6.2-RC1 (final 1.3 version will be based on FreeBSD 6.2-RELEASE)

- WARNING: the generic-pc image no longer fits on 8 MB CF cards! (>= 10 MB required)

- for generic-pc-cdrom, the configuration may now also be stored on an USB memory stick
  (instead of a floppy disk). m0n0wall will automatically probe for an USB stick with